[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.1",
    "fastapi>=0.128.5",
    "fastmcp>=2.14.5",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=0.36.2",
    "importlib-metadata>=8.7.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.1.54",
    "mcp>=1.26.0",
    "mcp-server>=0.1.4",
    "multidict>=6.7.1",
    "numexpr>=2.14.1",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "sse-starlette>=3.2.0",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "yarl>=1.22.0",
    "zipp>=3.23.0",
]
